syntax = "proto3";

package bookstore.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "v1/author_resources.proto";

option go_package = "github.com/tinrab/bomboni/bookstore/v1;bookstore";

// AuthorService provides operations for managing authors.
service AuthorService {
  // Creates a new author.
  rpc CreateAuthor(CreateAuthorRequest) returns (Author);

  // Gets an author by ID.
  rpc GetAuthor(GetAuthorRequest) returns (Author);

  // Updates an author.
  rpc UpdateAuthor(UpdateAuthorRequest) returns (Author);

  // Deletes an author.
  rpc DeleteAuthor(DeleteAuthorRequest) returns (google.protobuf.Empty);

  // Lists authors.
  rpc ListAuthors(ListAuthorsRequest) returns (ListAuthorsResponse);

  // Searches authors.
  rpc SearchAuthors(SearchAuthorsRequest) returns (SearchAuthorsResponse);
}

// CreateAuthorRequest represents a request to create a new author.
message CreateAuthorRequest {
  // The display name of the author.
  string display_name = 1;
}

// GetAuthorRequest represents a request to get an author by name.
message GetAuthorRequest {
  // The name of the author to retrieve.
  string name = 1;
}

// UpdateAuthorRequest represents a request to update an author.
message UpdateAuthorRequest {
  // The name of the author to update.
  string name = 1;

  // The author to update.
  Author author = 2;

  // The field mask indicating which fields to update.
  google.protobuf.FieldMask update_mask = 3;
}

// DeleteAuthorRequest represents a request to delete an author.
message DeleteAuthorRequest {
  // The name of the author to delete.
  string name = 1;
}

// ListAuthorsRequest represents a request to list authors.
message ListAuthorsRequest {
  // The maximum number of authors to return.
  optional int32 page_size = 1;

  // The page token returned from a previous request.
  optional string page_token = 2;

  // The filter to apply to the list.
  optional string filter = 3;

  // The order to apply to the list.
  optional string order_by = 4;

  optional bool show_deleted = 5;
}

// ListAuthorsResponse represents the response from listing authors.
message ListAuthorsResponse {
  // The list of authors.
  repeated Author authors = 1;

  // The next page token.
  optional string next_page_token = 2;

  // The total number of authors matching the request.
  int64 total_size = 3;
}

// SearchAuthorsRequest represents a request to search authors.
message SearchAuthorsRequest {
  // The search query.
  string query = 1;

  // The maximum number of authors to return.
  optional int32 page_size = 2;

  // The page token returned from a previous request.
  optional string page_token = 3;

  // The filter to apply to the search results.
  optional string filter = 4;

  // The order to apply to the search results.
  optional string order_by = 5;
}

// SearchAuthorsResponse represents the response from searching authors.
message SearchAuthorsResponse {
  // The list of authors matching the search query.
  repeated Author authors = 1;

  // The next page token.
  optional string next_page_token = 2;

  // The total number of authors matching the search query.
  int64 total_size = 3;
}
